--- a/Content/SQL_Write_project/SQL_Write_project.csproj
+++ b/Content/SQL_Write_project/SQL_Write_project.csproj
@@ -12,9 +12,9 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Honeywell.RabbitMQ" Version="1.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.1.0" />
   </ItemGroup>
 
@@ -37,6 +37,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\RabbitMQFactory\RabbitMQFactory.csproj" />
     <ProjectReference Include="..\Events_Project\Events_Project.csproj" />
   </ItemGroup>
 
